--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
     </head>
     <body>
         <canvas id="canvas"></canvas>
+        <div class="panels-container">
+            <div class="panel" id="panel-hangman">
+                <h3>Hangman</h3>
+
+            </div>
+
+            <div class="panel" id="panel-ttt">
+                <h3>Tic Tac Toe</h3>
+
+
+            </div>
+
+            <div class="panel" id="panel-simon">
+                <h3>Simon</h3>
+
+
+            </div>
+
+            <div class="panel" id="panel-rps">
+                <h3>Rock Paper Scissors</h3>
+
+            </div>
+        </div>
 
         
     </body>
