add css for expandable menu panels

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             </div>
 
-            <div class="panel" id="panel-ttt">
+            <div class="panel active" id="panel-ttt">
                 <h3>Tic Tac Toe</h3>
 
 
